[package]
name = "boris-wallet-tracker-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
borsh = "1.5.7"
bs58 = "0.5.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = "1.7.0"
once_cell = "1.21.3"
serde_json = "1.0.145"
solana-client = "3.0.3"
solana-commitment-config = "3.0.0"
solana-relayer-adapter-rust = "3.2.3"
solana-sdk = "3.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"
tower-http = "0.6.6"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
